--- a/inst/AdminLTE/AdminLTE.css
+++ b/inst/AdminLTE/AdminLTE.css
@@ -1437,7 +1437,7 @@ a:focus {
 }
 .progress-bar-aqua,
 .progress-bar-info {
-  background-color: #00c0ef;
+  background-color: #e44c65;
 }
 .progress-striped .progress-bar-aqua,
 .progress-striped .progress-bar-info {
@@ -1560,7 +1560,7 @@ a:focus {
   border-top-color: #3c8dbc;
 }
 .box.box-info {
-  border-top-color: #00c0ef;
+  border-top-color: #e44c65;
 }
 .box.box-danger {
   border-top-color: #dd4b39;
@@ -1630,12 +1630,12 @@ a:focus {
   color: #ffffff;
 }
 .box.box-solid.box-info {
-  border: 1px solid #00c0ef;
+  border: 1px solid #e44c65;
 }
 .box.box-solid.box-info > .box-header {
   color: #ffffff;
-  background: #00c0ef;
-  background-color: #00c0ef;
+  background: #e44c65;
+  background-color: #e44c65;
 }
 .box.box-solid.box-info > .box-header a,
 .box.box-solid.box-info > .box-header .btn {
@@ -1943,7 +1943,7 @@ a:focus {
   border-left-color: #f39c12;
 }
 .todo-list .info {
-  border-left-color: #00c0ef;
+  border-left-color: #e44c65;
 }
 .todo-list .success {
   border-left-color: #00a65a;
@@ -2269,7 +2269,7 @@ a:focus {
   background-color: #008d4c;
 }
 .btn-info {
-  background-color: #00c0ef;
+  background-color: #e44c65;
   border-color: #00acd6;
 }
 .btn-info:hover,
@@ -2579,7 +2579,7 @@ a:focus {
   border-top-color: #3c8dbc;
 }
 .nav-tabs-custom.tab-info > .nav-tabs > li.active {
-  border-top-color: #00c0ef;
+  border-top-color: #e44c65;
 }
 .nav-tabs-custom.tab-danger > .nav-tabs > li.active {
   border-top-color: #dd4b39;
@@ -2910,13 +2910,13 @@ table.text-center th {
   border-left-color: #f39c12;
 }
 .direct-chat-info .right > .direct-chat-text {
-  background: #00c0ef;
-  border-color: #00c0ef;
+  background: #e44c65;
+  border-color: #e44c65;
   color: #ffffff;
 }
 .direct-chat-info .right > .direct-chat-text:after,
 .direct-chat-info .right > .direct-chat-text:before {
-  border-left-color: #00c0ef;
+  border-left-color: #e44c65;
 }
 .direct-chat-success .right > .direct-chat-text {
   background: #00a65a;
@@ -4433,7 +4433,7 @@ table.text-center th {
 .alert-info,
 .label-info,
 .modal-info .modal-body {
-  background-color: #00c0ef !important;
+  background-color: #e44c65 !important;
 }
 .bg-blue {
   background-color: #0073b7 !important;
@@ -4544,7 +4544,7 @@ table.text-center th {
   color: #f39c12 !important;
 }
 .text-aqua {
-  color: #00c0ef !important;
+  color: #e44c65 !important;
 }
 .text-blue {
   color: #0073b7 !important;
@@ -4674,12 +4674,12 @@ table.text-center th {
   color: #fff;
 }
 .bg-aqua-gradient {
-  background: #00c0ef !important;
-  background: -webkit-gradient(linear, left bottom, left top, color-stop(0, #00c0ef), color-stop(1, #14d1ff)) !important;
-  background: -ms-linear-gradient(bottom, #00c0ef, #14d1ff) !important;
-  background: -moz-linear-gradient(center bottom, #00c0ef 0%, #14d1ff 100%) !important;
-  background: -o-linear-gradient(#14d1ff, #00c0ef) !important;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#14d1ff', endColorstr='#00c0ef', GradientType=0) !important;
+  background: #e44c65 !important;
+  background: -webkit-gradient(linear, left bottom, left top, color-stop(0, #e44c65), color-stop(1, #14d1ff)) !important;
+  background: -ms-linear-gradient(bottom, #e44c65, #14d1ff) !important;
+  background: -moz-linear-gradient(center bottom, #e44c65 0%, #14d1ff 100%) !important;
+  background: -o-linear-gradient(#14d1ff, #e44c65) !important;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#14d1ff', endColorstr='#e44c65', GradientType=0) !important;
   color: #fff;
 }
 .bg-yellow-gradient {
