--- a/inst/shriner.css
+++ b/inst/shriner.css
@@ -50,9 +50,8 @@ div.box-body .shiny-input-container {
   width: auto;
 }
 
-/* Sidebar is dark, so make text light by default. */
 .sidebar {
-  color: #fff;
+  color: #333;
 }
 /* Slider min and max in sidebar. */
 .sidebar .irs-min, .sidebar .irs-max {
