--- a/inst/AdminLTE/AdminLTE.css
+++ b/inst/AdminLTE/AdminLTE.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap');
+@font-face {
+  font-family: 'Arca Majora';
+  src: url('fonts/ArcaMajora3-Bold.eot'); /* IE9 Compat Modes */
+  src: url('fonts/ArcaMajora3-Bold.woff2') format('woff2'), /* Super Modern Browsers */
+       url('fonts/ArcaMajora3-Bold.woff') format('woff') /* Pretty Modern Browsers */
+}
 /*!
  *   AdminLTE v2.3.11
  *   Author: Almsaeed Studio
@@ -18,7 +25,7 @@ body {
   height: 100%;
 }
 body {
-  font-family: 'Open Sans', 'Helvetica', 'Arial', sans-serif;
+  font-family: 'Open Sans', sans-serif;
   font-weight: 400;
   overflow-x: hidden;
   overflow-y: auto;
@@ -161,7 +168,7 @@ h6,
 .h4,
 .h5,
 .h6 {
-  font-family: 'Open Sans', 'Helvetica', 'Arial', sans-serif;
+  font-family: 'Arca Majora', sans-serif;
 }
 /* General Links */
 a {
@@ -293,9 +300,9 @@ a:focus {
   line-height: 50px;
   text-align: center;
   width: 230px;
-  font-family: 'Open Sans', 'Helvetica', 'Arial', sans-serif;
+  font-family: 'Arca Majora', 'Helvetica', 'Arial', sans-serif;
   padding: 0 15px;
-  font-weight: 300;
+  font-weight: 500;
   overflow: hidden;
 }
 .main-header .logo .logo-lg {
@@ -1437,7 +1444,7 @@ a:focus {
 }
 .progress-bar-aqua,
 .progress-bar-info {
-  background-color: #e44c65;
+  background-color: #00c0ef;
 }
 .progress-striped .progress-bar-aqua,
 .progress-striped .progress-bar-info {
@@ -4342,36 +4349,8 @@ table.text-center th {
 .description-block > .description-text {
   text-transform: uppercase;
 }
-.bg-red,
-.bg-yellow,
-.bg-aqua,
-.bg-blue,
-.bg-light-blue,
-.bg-green,
-.bg-navy,
-.bg-teal,
-.bg-olive,
-.bg-lime,
-.bg-orange,
-.bg-fuchsia,
-.bg-purple,
-.bg-maroon,
-.bg-black,
+.bg-red
 .bg-red-active,
-.bg-yellow-active,
-.bg-aqua-active,
-.bg-blue-active,
-.bg-light-blue-active,
-.bg-green-active,
-.bg-navy-active,
-.bg-teal-active,
-.bg-olive-active,
-.bg-lime-active,
-.bg-orange-active,
-.bg-fuchsia-active,
-.bg-purple-active,
-.bg-maroon-active,
-.bg-black-active,
 .callout.callout-danger,
 .callout.callout-warning,
 .callout.callout-info,
@@ -4403,16 +4382,6 @@ table.text-center th {
 .modal-danger .modal-footer {
   color: #fff !important;
 }
-.bg-gray {
-  color: #000;
-  background-color: #d2d6de !important;
-}
-.bg-gray-light {
-  background-color: #f7f7f7;
-}
-.bg-black {
-  background-color: #111111 !important;
-}
 .bg-red,
 .callout.callout-danger,
 .alert-danger,
@@ -4421,117 +4390,10 @@ table.text-center th {
 .modal-danger .modal-body {
   background-color: #dd4b39 !important;
 }
-.bg-yellow,
-.callout.callout-warning,
-.alert-warning,
-.label-warning,
-.modal-warning .modal-body {
-  background-color: #f39c12 !important;
-}
-.bg-aqua,
-.callout.callout-info,
-.alert-info,
-.label-info,
-.modal-info .modal-body {
-  background-color: #e44c65 !important;
-}
-.bg-blue {
-  background-color: #0073b7 !important;
-}
-.bg-light-blue,
-.label-primary,
-.modal-primary .modal-body {
-  background-color: #3c8dbc !important;
-}
-.bg-green,
-.callout.callout-success,
-.alert-success,
-.label-success,
-.modal-success .modal-body {
-  background-color: #00a65a !important;
-}
-.bg-navy {
-  background-color: #001f3f !important;
-}
-.bg-teal {
-  background-color: #39cccc !important;
-}
-.bg-olive {
-  background-color: #3d9970 !important;
-}
-.bg-lime {
-  background-color: #01ff70 !important;
-}
-.bg-orange {
-  background-color: #ff851b !important;
-}
-.bg-fuchsia {
-  background-color: #f012be !important;
-}
-.bg-purple {
-  background-color: #605ca8 !important;
-}
-.bg-maroon {
-  background-color: #d81b60 !important;
-}
-.bg-gray-active {
-  color: #000;
-  background-color: #b5bbc8 !important;
-}
-.bg-black-active {
-  background-color: #000000 !important;
-}
 .bg-red-active,
 .modal-danger .modal-header,
 .modal-danger .modal-footer {
   background-color: #d33724 !important;
-}
-.bg-yellow-active,
-.modal-warning .modal-header,
-.modal-warning .modal-footer {
-  background-color: #db8b0b !important;
-}
-.bg-aqua-active,
-.modal-info .modal-header,
-.modal-info .modal-footer {
-  background-color: #00a7d0 !important;
-}
-.bg-blue-active {
-  background-color: #005384 !important;
-}
-.bg-light-blue-active,
-.modal-primary .modal-header,
-.modal-primary .modal-footer {
-  background-color: #357ca5 !important;
-}
-.bg-green-active,
-.modal-success .modal-header,
-.modal-success .modal-footer {
-  background-color: #008d4c !important;
-}
-.bg-navy-active {
-  background-color: #001a35 !important;
-}
-.bg-teal-active {
-  background-color: #30bbbb !important;
-}
-.bg-olive-active {
-  background-color: #368763 !important;
-}
-.bg-lime-active {
-  background-color: #00e765 !important;
-}
-.bg-orange-active {
-  background-color: #ff7701 !important;
-}
-.bg-fuchsia-active {
-  background-color: #db0ead !important;
-}
-.bg-purple-active {
-  background-color: #555299 !important;
-}
-.bg-maroon-active {
-  background-color: #ca195a !important;
 }
 [class^="bg-"].disabled {
   opacity: 0.65;
@@ -4646,69 +4508,6 @@ table.text-center th {
   width: auto !important;
   height: auto !important;
 }
-.bg-teal-gradient {
-  background: #39cccc !important;
-  background: -webkit-gradient(linear, left bottom, left top, color-stop(0, #39cccc), color-stop(1, #7adddd)) !important;
-  background: -ms-linear-gradient(bottom, #39cccc, #7adddd) !important;
-  background: -moz-linear-gradient(center bottom, #39cccc 0%, #7adddd 100%) !important;
-  background: -o-linear-gradient(#7adddd, #39cccc) !important;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#7adddd', endColorstr='#39cccc', GradientType=0) !important;
-  color: #fff;
-}
-.bg-light-blue-gradient {
-  background: #3c8dbc !important;
-  background: -webkit-gradient(linear, left bottom, left top, color-stop(0, #3c8dbc), color-stop(1, #67a8ce)) !important;
-  background: -ms-linear-gradient(bottom, #3c8dbc, #67a8ce) !important;
-  background: -moz-linear-gradient(center bottom, #3c8dbc 0%, #67a8ce 100%) !important;
-  background: -o-linear-gradient(#67a8ce, #3c8dbc) !important;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#67a8ce', endColorstr='#3c8dbc', GradientType=0) !important;
-  color: #fff;
-}
-.bg-blue-gradient {
-  background: #0073b7 !important;
-  background: -webkit-gradient(linear, left bottom, left top, color-stop(0, #0073b7), color-stop(1, #0089db)) !important;
-  background: -ms-linear-gradient(bottom, #0073b7, #0089db) !important;
-  background: -moz-linear-gradient(center bottom, #0073b7 0%, #0089db 100%) !important;
-  background: -o-linear-gradient(#0089db, #0073b7) !important;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0089db', endColorstr='#0073b7', GradientType=0) !important;
-  color: #fff;
-}
-.bg-aqua-gradient {
-  background: #e44c65 !important;
-  background: -webkit-gradient(linear, left bottom, left top, color-stop(0, #e44c65), color-stop(1, #14d1ff)) !important;
-  background: -ms-linear-gradient(bottom, #e44c65, #14d1ff) !important;
-  background: -moz-linear-gradient(center bottom, #e44c65 0%, #14d1ff 100%) !important;
-  background: -o-linear-gradient(#14d1ff, #e44c65) !important;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#14d1ff', endColorstr='#e44c65', GradientType=0) !important;
-  color: #fff;
-}
-.bg-yellow-gradient {
-  background: #f39c12 !important;
-  background: -webkit-gradient(linear, left bottom, left top, color-stop(0, #f39c12), color-stop(1, #f7bc60)) !important;
-  background: -ms-linear-gradient(bottom, #f39c12, #f7bc60) !important;
-  background: -moz-linear-gradient(center bottom, #f39c12 0%, #f7bc60 100%) !important;
-  background: -o-linear-gradient(#f7bc60, #f39c12) !important;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f7bc60', endColorstr='#f39c12', GradientType=0) !important;
-  color: #fff;
-}
-.bg-purple-gradient {
-  background: #605ca8 !important;
-  background: -webkit-gradient(linear, left bottom, left top, color-stop(0, #605ca8), color-stop(1, #9491c4)) !important;
-  background: -ms-linear-gradient(bottom, #605ca8, #9491c4) !important;
-  background: -moz-linear-gradient(center bottom, #605ca8 0%, #9491c4 100%) !important;
-  background: -o-linear-gradient(#9491c4, #605ca8) !important;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#9491c4', endColorstr='#605ca8', GradientType=0) !important;
-  color: #fff;
-}
-.bg-green-gradient {
-  background: #00a65a !important;
-  background: -webkit-gradient(linear, left bottom, left top, color-stop(0, #00a65a), color-stop(1, #00ca6d)) !important;
-  background: -ms-linear-gradient(bottom, #00a65a, #00ca6d) !important;
-  background: -moz-linear-gradient(center bottom, #00a65a 0%, #00ca6d 100%) !important;
-  background: -o-linear-gradient(#00ca6d, #00a65a) !important;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00ca6d', endColorstr='#00a65a', GradientType=0) !important;
-  color: #fff;
-}
 .bg-red-gradient {
   background: #dd4b39 !important;
   background: -webkit-gradient(linear, left bottom, left top, color-stop(0, #dd4b39), color-stop(1, #e47365)) !important;
@@ -4716,24 +4515,6 @@ table.text-center th {
   background: -moz-linear-gradient(center bottom, #dd4b39 0%, #e47365 100%) !important;
   background: -o-linear-gradient(#e47365, #dd4b39) !important;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#e47365', endColorstr='#dd4b39', GradientType=0) !important;
-  color: #fff;
-}
-.bg-black-gradient {
-  background: #111111 !important;
-  background: -webkit-gradient(linear, left bottom, left top, color-stop(0, #111111), color-stop(1, #2b2b2b)) !important;
-  background: -ms-linear-gradient(bottom, #111111, #2b2b2b) !important;
-  background: -moz-linear-gradient(center bottom, #111111 0%, #2b2b2b 100%) !important;
-  background: -o-linear-gradient(#2b2b2b, #111111) !important;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#2b2b2b', endColorstr='#111111', GradientType=0) !important;
-  color: #fff;
-}
-.bg-maroon-gradient {
-  background: #d81b60 !important;
-  background: -webkit-gradient(linear, left bottom, left top, color-stop(0, #d81b60), color-stop(1, #e73f7c)) !important;
-  background: -ms-linear-gradient(bottom, #d81b60, #e73f7c) !important;
-  background: -moz-linear-gradient(center bottom, #d81b60 0%, #e73f7c 100%) !important;
-  background: -o-linear-gradient(#e73f7c, #d81b60) !important;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#e73f7c', endColorstr='#d81b60', GradientType=0) !important;
   color: #fff;
 }
 .description-block .description-icon {
