darker left side

--- a/inst/AdminLTE/AdminLTE.css
+++ b/inst/AdminLTE/AdminLTE.css
@@ -101,7 +101,7 @@ body {
 .content-wrapper,
 .right-side {
   min-height: 100%;
-  background-color: #f5f5f5;
+  background-color: #e4ecd6;
   z-index: 800;
 }
 .main-footer {
