--- a/inst/AdminLTE/AdminLTE.css
+++ b/inst/AdminLTE/AdminLTE.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap');
+#f5f5f5@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap');
 @font-face {
   font-family: 'Arca Majora';
   src: url('fonts/ArcaMajora3-Bold.eot'); /* IE9 Compat Modes */
@@ -101,7 +101,7 @@ body {
 .content-wrapper,
 .right-side {
   min-height: 100%;
-  background-color: #e4ecd6;
+  background-color: #f5f5f5;
   z-index: 800;
 }
 .main-footer {
@@ -1281,15 +1281,15 @@ a:focus {
   appearance: none;
 }
 .form-group.has-success label {
-  color: #00a65a;
+  color: #61c250;
 }
 .form-group.has-success .form-control,
 .form-group.has-success .input-group-addon {
-  border-color: #00a65a;
+  border-color: #61c250;
   box-shadow: none;
 }
 .form-group.has-success .help-block {
-  color: #00a65a;
+  color: #61c250;
 }
 .form-group.has-warning label {
   color: #f39c12;
@@ -1434,7 +1434,7 @@ a:focus {
 }
 .progress-bar-green,
 .progress-bar-success {
-  background-color: #00a65a;
+  background-color: #61c250;
 }
 .progress-striped .progress-bar-green,
 .progress-striped .progress-bar-success {
@@ -1444,7 +1444,7 @@ a:focus {
 }
 .progress-bar-aqua,
 .progress-bar-info {
-  background-color: #00c0ef;
+  background-color: #29afba;
 }
 .progress-striped .progress-bar-aqua,
 .progress-striped .progress-bar-info {
@@ -1567,7 +1567,7 @@ a:focus {
   border-top-color: #3c8dbc;
 }
 .box.box-info {
-  border-top-color: #e44c65;
+  border-top-color: #970332;
 }
 .box.box-danger {
   border-top-color: #dd4b39;
@@ -1576,7 +1576,7 @@ a:focus {
   border-top-color: #f39c12;
 }
 .box.box-success {
-  border-top-color: #00a65a;
+  border-top-color: #61c250;
 }
 .box.box-default {
   border-top-color: #d2d6de;
@@ -1637,12 +1637,12 @@ a:focus {
   color: #ffffff;
 }
 .box.box-solid.box-info {
-  border: 1px solid #e44c65;
+  border: 1px solid #970332;
 }
 .box.box-solid.box-info > .box-header {
   color: #ffffff;
-  background: #e44c65;
-  background-color: #e44c65;
+  background: #970332;
+  background-color: #970332;
 }
 .box.box-solid.box-info > .box-header a,
 .box.box-solid.box-info > .box-header .btn {
@@ -1673,12 +1673,12 @@ a:focus {
   color: #ffffff;
 }
 .box.box-solid.box-success {
-  border: 1px solid #00a65a;
+  border: 1px solid #61c250;
 }
 .box.box-solid.box-success > .box-header {
   color: #ffffff;
-  background: #00a65a;
-  background-color: #00a65a;
+  background: #61c250;
+  background-color: #61c250;
 }
 .box.box-solid.box-success > .box-header a,
 .box.box-solid.box-success > .box-header .btn {
@@ -1950,10 +1950,10 @@ a:focus {
   border-left-color: #f39c12;
 }
 .todo-list .info {
-  border-left-color: #e44c65;
+  border-left-color: #970332;
 }
 .todo-list .success {
-  border-left-color: #00a65a;
+  border-left-color: #61c250;
 }
 .todo-list .primary {
   border-left-color: #3c8dbc;
@@ -1985,7 +1985,7 @@ a:focus {
   border-radius: 50%;
 }
 .chat .item > .online {
-  border: 2px solid #00a65a;
+  border: 2px solid #61c250;
 }
 .chat .item > .offline {
   border: 2px solid #dd4b39;
@@ -2267,7 +2267,7 @@ a:focus {
   background-color: #367fa9;
 }
 .btn-success {
-  background-color: #00a65a;
+  background-color: #61c250;
   border-color: #008d4c;
 }
 .btn-success:hover,
@@ -2276,7 +2276,7 @@ a:focus {
   background-color: #008d4c;
 }
 .btn-info {
-  background-color: #e44c65;
+  background-color: #970332;
   border-color: #00acd6;
 }
 .btn-info:hover,
@@ -2586,7 +2586,7 @@ a:focus {
   border-top-color: #3c8dbc;
 }
 .nav-tabs-custom.tab-info > .nav-tabs > li.active {
-  border-top-color: #e44c65;
+  border-top-color: #970332;
 }
 .nav-tabs-custom.tab-danger > .nav-tabs > li.active {
   border-top-color: #dd4b39;
@@ -2595,7 +2595,7 @@ a:focus {
   border-top-color: #f39c12;
 }
 .nav-tabs-custom.tab-success > .nav-tabs > li.active {
-  border-top-color: #00a65a;
+  border-top-color: #61c250;
 }
 .nav-tabs-custom.tab-default > .nav-tabs > li.active {
   border-top-color: #d2d6de;
@@ -2917,22 +2917,22 @@ table.text-center th {
   border-left-color: #f39c12;
 }
 .direct-chat-info .right > .direct-chat-text {
-  background: #e44c65;
-  border-color: #e44c65;
+  background: #970332;
+  border-color: #970332;
   color: #ffffff;
 }
 .direct-chat-info .right > .direct-chat-text:after,
 .direct-chat-info .right > .direct-chat-text:before {
-  border-left-color: #e44c65;
+  border-left-color: #970332;
 }
 .direct-chat-success .right > .direct-chat-text {
-  background: #00a65a;
-  border-color: #00a65a;
+  background: #61c250;
+  border-color: #61c250;
   color: #ffffff;
 }
 .direct-chat-success .right > .direct-chat-text:after,
 .direct-chat-success .right > .direct-chat-text:before {
-  border-left-color: #00a65a;
+  border-left-color: #61c250;
 }
 /*
  * Component: Users List
@@ -4349,8 +4349,36 @@ table.text-center th {
 .description-block > .description-text {
   text-transform: uppercase;
 }
-.bg-red
+.bg-red,
+.bg-yellow,
+.bg-aqua,
+.bg-blue,
+.bg-light-blue,
+.bg-green,
+.bg-navy,
+.bg-teal,
+.bg-olive,
+.bg-lime,
+.bg-orange,
+.bg-fuchsia,
+.bg-purple,
+.bg-maroon,
+.bg-black,
 .bg-red-active,
+.bg-yellow-active,
+.bg-aqua-active,
+.bg-blue-active,
+.bg-light-blue-active,
+.bg-green-active,
+.bg-navy-active,
+.bg-teal-active,
+.bg-olive-active,
+.bg-lime-active,
+.bg-orange-active,
+.bg-fuchsia-active,
+.bg-purple-active,
+.bg-maroon-active,
+.bg-black-active,
 .callout.callout-danger,
 .callout.callout-warning,
 .callout.callout-info,
@@ -4382,6 +4410,16 @@ table.text-center th {
 .modal-danger .modal-footer {
   color: #fff !important;
 }
+.bg-gray {
+  color: #000;
+  background-color: #d2d6de !important;
+}
+.bg-gray-light {
+  background-color: #f7f7f7;
+}
+.bg-black {
+  background-color: #111111 !important;
+}
 .bg-red,
 .callout.callout-danger,
 .alert-danger,
@@ -4390,10 +4428,117 @@ table.text-center th {
 .modal-danger .modal-body {
   background-color: #dd4b39 !important;
 }
+.bg-yellow,
+.callout.callout-warning,
+.alert-warning,
+.label-warning,
+.modal-warning .modal-body {
+  background-color: #f39c12 !important;
+}
+.bg-aqua,
+.callout.callout-info,
+.alert-info,
+.label-info,
+.modal-info .modal-body {
+  background-color: #29afba !important;
+}
+.bg-blue {
+  background-color: #09435b !important;
+}
+.bg-light-blue,
+.label-primary,
+.modal-primary .modal-body {
+  background-color: #3c8dbc !important;
+}
+.bg-green,
+.callout.callout-success,
+.alert-success,
+.label-success,
+.modal-success .modal-body {
+  background-color: #61c250 !important;
+}
+.bg-navy {
+  background-color: #001f3f !important;
+}
+.bg-teal {
+  background-color: #39cccc !important;
+}
+.bg-olive {
+  background-color: #3d9970 !important;
+}
+.bg-lime {
+  background-color: #01ff70 !important;
+}
+.bg-orange {
+  background-color: #ff851b !important;
+}
+.bg-fuchsia {
+  background-color: #f012be !important;
+}
+.bg-purple {
+  background-color: #605ca8 !important;
+}
+.bg-maroon {
+  background-color: #d81b60 !important;
+}
+.bg-gray-active {
+  color: #000;
+  background-color: #b5bbc8 !important;
+}
+.bg-black-active {
+  background-color: #000000 !important;
+}
 .bg-red-active,
 .modal-danger .modal-header,
 .modal-danger .modal-footer {
   background-color: #d33724 !important;
+}
+.bg-yellow-active,
+.modal-warning .modal-header,
+.modal-warning .modal-footer {
+  background-color: #db8b0b !important;
+}
+.bg-aqua-active,
+.modal-info .modal-header,
+.modal-info .modal-footer {
+  background-color: #00a7d0 !important;
+}
+.bg-blue-active {
+  background-color: #005384 !important;
+}
+.bg-light-blue-active,
+.modal-primary .modal-header,
+.modal-primary .modal-footer {
+  background-color: #357ca5 !important;
+}
+.bg-green-active,
+.modal-success .modal-header,
+.modal-success .modal-footer {
+  background-color: #008d4c !important;
+}
+.bg-navy-active {
+  background-color: #001a35 !important;
+}
+.bg-teal-active {
+  background-color: #30bbbb !important;
+}
+.bg-olive-active {
+  background-color: #368763 !important;
+}
+.bg-lime-active {
+  background-color: #00e765 !important;
+}
+.bg-orange-active {
+  background-color: #ff7701 !important;
+}
+.bg-fuchsia-active {
+  background-color: #db0ead !important;
+}
+.bg-purple-active {
+  background-color: #555299 !important;
+}
+.bg-maroon-active {
+  background-color: #ca195a !important;
 }
 [class^="bg-"].disabled {
   opacity: 0.65;
@@ -4406,10 +4551,10 @@ table.text-center th {
   color: #f39c12 !important;
 }
 .text-aqua {
-  color: #e44c65 !important;
+  color: #970332 !important;
 }
 .text-blue {
-  color: #0073b7 !important;
+  color: #09435b !important;
 }
 .text-black {
   color: #111111 !important;
@@ -4418,7 +4563,7 @@ table.text-center th {
   color: #3c8dbc !important;
 }
 .text-green {
-  color: #00a65a !important;
+  color: #61c250 !important;
 }
 .text-gray {
   color: #d2d6de !important;
